Changed background of empty page

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -194,7 +194,7 @@ p {
 }
 
 .coming-soon-page {
-    background: #eee url("../img/empty.png");
+    background: #eee url("../img/empty.gif");
     padding: 50px;
     color: #363636;
     text-align: center;
