--- a/src/css/main.css
+++ b/src/css/main.css
@@ -237,6 +237,16 @@ p {
     /*}*/
 /*}*/
 
+
+
+
+
+.caricature-page .eyes {
+    direction: ltr;
+}
+
+
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
