--- a/src/css/main.css
+++ b/src/css/main.css
@@ -259,11 +259,36 @@ p {
 .coming-soon-page {
     background: #eee url("../img/empty.gif") repeat;
     padding: 50px;
-    color: #363636;
+    /*color: #363636;*/
+    color: #F9C711;
+    text-shadow: 0 0 8px #000;
     text-align: center;
 }
 
-
+.contact-page {
+    background: url("../img/first-page-bg.png") fixed center;
+    background-size: cover;
+    height: 100vh;
+    text-align: center;
+    width: 100%;
+    padding-top: 50px;
+    direction: ltr;
+}
+.contact-page ul {
+    width: 600px;
+    margin: 0 auto;
+    text-align: left;
+}
+.contact-page ul li {
+    list-style: none;
+    padding: 10px;
+}
+.contact-page ul a {
+    text-decoration: none;
+    color: #F9C711;
+    text-shadow: 0 0 20px #000;
+    font-size: 36px;
+}
 
 
 
