--- a/src/css/main.css
+++ b/src/css/main.css
@@ -425,6 +425,161 @@ right connector from last child*/
 
 
 
+
+
+
+
+
+
+
+.loading {
+    margin: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    width: 100%;
+    height: 100vh;
+    background-color: #367497;
+}
+
+.cssload-loader {
+    width: 146px;
+    height: 146px;
+    line-height: 146px;
+    margin: 100px auto;
+    position: relative;
+    box-sizing: border-box;
+    text-align: center;
+    z-index: 0;
+    text-transform: uppercase;
+    -o-text-transform: uppercase;
+    -ms-text-transform: uppercase;
+    -webkit-text-transform: uppercase;
+    -moz-text-transform: uppercase;
+}
+
+.cssload-loader:before,
+.cssload-loader:after {
+    opacity: 0;
+    box-sizing: border-box;
+    -o-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    content: "\0020";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 97px;
+    border: 5px solid rgb(110,207,246);
+    box-shadow: 0 0 49px rgb(110,207,246), inset 0 0 49px rgb(110,207,246);
+    -o-box-shadow: 0 0 49px rgb(110,207,246), inset 0 0 49px rgb(110,207,246);
+    -ms-box-shadow: 0 0 49px rgb(110,207,246), inset 0 0 49px rgb(110,207,246);
+    -webkit-box-shadow: 0 0 49px rgb(110,207,246), inset 0 0 49px rgb(110,207,246);
+    -moz-box-shadow: 0 0 49px rgb(110,207,246), inset 0 0 49px rgb(110,207,246);
+}
+
+.cssload-loader:after {
+    z-index: 1;
+    animation: cssload-gogoloader 2.9s infinite 1.45s;
+    -o-animation: cssload-gogoloader 2.9s infinite 1.45s;
+    -ms-animation: cssload-gogoloader 2.9s infinite 1.45s;
+    -webkit-animation: cssload-gogoloader 2.9s infinite 1.45s;
+    -moz-animation: cssload-gogoloader 2.9s infinite 1.45s;
+}
+
+.cssload-loader:before {
+    z-index: 2;
+    animation: cssload-gogoloader 2.9s infinite;
+    -o-animation: cssload-gogoloader 2.9s infinite;
+    -ms-animation: cssload-gogoloader 2.9s infinite;
+    -webkit-animation: cssload-gogoloader 2.9s infinite;
+    -moz-animation: cssload-gogoloader 2.9s infinite;
+}
+
+
+
+@keyframes cssload-gogoloader {
+    0% {
+        transform: scale(0);
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        transform: scale(1);
+        opacity: 0;
+    }
+}
+
+@-o-keyframes cssload-gogoloader {
+    0% {
+        -o-transform: scale(0);
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        -o-transform: scale(1);
+        opacity: 0;
+    }
+}
+
+@-ms-keyframes cssload-gogoloader {
+    0% {
+        -ms-transform: scale(0);
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        -ms-transform: scale(1);
+        opacity: 0;
+    }
+}
+
+@-webkit-keyframes cssload-gogoloader {
+    0% {
+        -webkit-transform: scale(0);
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        -webkit-transform: scale(1);
+        opacity: 0;
+    }
+}
+
+@-moz-keyframes cssload-gogoloader {
+    0% {
+        -moz-transform: scale(0);
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        -moz-transform: scale(1);
+        opacity: 0;
+    }
+}
+
+
+
+
+
+
+
+
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
