--- a/src/css/main.css
+++ b/src/css/main.css
@@ -149,6 +149,8 @@ p {
 
 
 
+
+
 .caricature-page {
     background: #367497;
     width: 100%;
@@ -184,7 +186,7 @@ p {
 }
 
 .first-page {
-    background: url("../img/first-page-bg.png") fixed center;
+    background: url("../img/first-page-bg.jpg") fixed center;
     background-size: cover;
     height: 65vh;
     text-align: center;
@@ -253,7 +255,7 @@ p {
 }
 
 .venue-page .map {
-    background: url("../img/map.png") center;
+    background: url("../img/map.jpg") center;
     width: 97vmin;
     height: 400px;
     border: none;
@@ -262,22 +264,22 @@ p {
 }
 
 
-
 .coming-soon-page {
-    background: #eee url("../img/empty.gif") repeat;
-    padding: 50px;
-    /*color: #363636;*/
-    color: #F9C711;
-    text-shadow: 0 0 8px #000;
+    background: #eee url("../img/empty.gif") repeat fixed;
+    /*padding: 50px;*/
+    padding: 2px;
+    color: #363636;
+    /*color: #F9C711;*/
+    /*text-shadow: 0 0 8px #000;*/
     text-align: center;
 }
 
 
 
 .contact-page {
-    background: url("../img/first-page-bg.png") fixed center;
+    background: url("../img/first-page-bg.jpg") fixed center;
     background-size: cover;
-    height: 100vh;
+    height: 80vh;
     text-align: center;
     width: 100%;
     padding-top: 20vh;
@@ -299,6 +301,11 @@ p {
     font-size: 1.2rem;
 }
 
+
+.footer {
+    background-color: #55D0F7;
+    text-align: center;
+}
 
 
 
@@ -434,6 +441,9 @@ right connector from last child*/
     left: 10px;
     border: 1px solid #b4b4b4;
     border-radius: 3px;
+}
+.languages:hover {
+    border: 1px solid #ffffff;
 }
 .languages ul {
     list-style: none;
