--- a/src/css/main.css
+++ b/src/css/main.css
@@ -108,6 +108,9 @@ body {
     /*font-family: SourceSansPro-Light, Arial, Helvetica, sans-serif; */
     font-family: iranian-sans, sans-serif;
     font-size: 100%;
+    direction: rtl;
+    overflow-x: hidden;
+    color: #333;
 
     /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#277297+0,4696aa+70,277297+100 */
     background: #277297; /* Old browsers */
@@ -115,59 +118,47 @@ body {
     background: -webkit-linear-gradient(top,  #277297 0%,#4696aa 70%,#277297 100%); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(to bottom,  #277297 0%,#4696aa 70%,#277297 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#277297', endColorstr='#277297',GradientType=0 ); /* IE6-9 */
-
-
-
-    color: #333;
-    direction: rtl;
-    overflow-x: hidden;
 }
 
 h1 {
     font-family: serif;
     font-size: 5rem;
     line-height: 140%;
-    margin-left: 10vh;
-    margin-right: 10vh;
 }
 
 h2 {
     font-size: 3rem;
     line-height: 150%;
-    margin-left: 10vh;
-    margin-right: 10vh;}
+}
 
 h3 {
     font-size: 2.2rem;
     line-height: 160%;
-    margin-left: 10vh;
-    margin-right: 10vh;}
+}
 
 h4 {
     font-size: 1.8rem;
     line-height: 170%;
-    margin-left: 10vh;
-    margin-right: 10vh;}
+}
 
 h5 {
     font-size: 1.6rem;
     line-height: 180%;
-    margin-left: 10vh;
-    margin-right: 10vh;}
+}
 
 h6 {
     font-size: 1.4rem;
-    line-height: 180%;
-    margin-left: 10vh;
-    margin-right: 10vh;}
+    line-height: 180%;}
 
 p {
     font-size: 1.4rem;
     line-height: 180%;
+}
+
+h1, h2, h3, h4, h5, h6, p {
     margin-left: 10vh;
-    margin-right: 10vh;}
-
-
+    margin-right: 10vh;
+}
 
 
 
@@ -178,11 +169,9 @@ p {
 
 .free-space-10 {
     height: 10vh;
-    /*border: 1px solid red;*/
 }
 
 .divider {
-    /*border-top: 1px dashed #fff;*/
     border-top: 1px solid #55D0F7;
 }
 
@@ -237,7 +226,6 @@ p {
 
 .bg-animation {
     background-color: #55D0F7;
-    /*background-image: url('../img/network.svg'), radial-gradient(200px 1000px at center, #ff8300 0%, rgba(0,0,0,0) 50%, rgba(0,0,0,0));*/
     background-image: url('../img/network.svg'), radial-gradient(200px 1000px at center, #ff450a 0%, rgba(0,0,0,0) 50%, rgba(0,0,0,0));
     background-size: 60%, 50% 100%;
     background-position: 0 80%, 0 100%;
@@ -249,16 +237,9 @@ p {
     /*border-left: 0;*/
 
     /*border: 1px solid #55D0F7;*/
-    /*border: 1px solid #55D0F7;*/
-
-    border-right: 0;
-    border-left: 0;
-
 }
 
 .first-page {
-    /*background: url("../img/first-page-bg.jpg") fixed center;*/
-    /*background-size: cover;*/
     text-align: center;
     width: 100%;
     color: #F9C711;
@@ -309,21 +290,19 @@ p {
 }
 
 .iran-symbol {
-    background: url("../img/iran.cover.2.png") bottom no-repeat;
+    background: url("../img/iran.cover.png") bottom no-repeat;
     background-size: contain;
     height: 100vh;
     max-height: 400px;
 }
 
 .poster-page {
-    /*background-color: #1B475C;*/
     background-color: #0C495A;
     color: #fff;
     text-align: center;
 }
 
 .poster-page img {
-    /*background-color: #1B475C;*/
     background-color: #0C495A;
     color: #fff;
     text-align: center;
@@ -399,7 +378,6 @@ p {
         text-align: right;
     }
 }
-
 
 
 .footer {
